breadcrumb alignment fixed and css changed for configuration in quickview

--- a/src/app/components/core/configuration-manager/configuration-group/configuration-group.component.css
+++ b/src/app/components/core/configuration-manager/configuration-group/configuration-group.component.css
@@ -20,7 +20,6 @@
 }
 
 .breadcrumb {
-  margin-left: 1.5rem;
   padding-top: 0.85rem;
   margin-top: 10px;
 }
@@ -32,7 +31,6 @@
 }
 
 #group_navigation .nav {
-  display: flex;
   flex-wrap: inherit;
   margin-bottom: inherit;
 }
@@ -52,6 +50,7 @@
 }
 
 .groupNav_contents {
+  display: flex;
   float: left;
   padding-right: 20px;
 }
